--- a/assets/style.css
+++ b/assets/style.css
@@ -1,20 +1,32 @@
 body {
-    background-color: #F5F7F8;
-    margin-left: 200px;
-    margin-right: 200px;
+  background-color: #F5F7F8;
 }
-.div_items {  
-    background-color: grey;
-    margin-bottom: 25px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 2fr 2fr 2fr 2fr 2fr;
-    gap: 20px 20px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      ". ."
-      ". ."
-      ". ."
-      ". ."
-      ". .";
-  }
+
+header {
+  text-align: center;
+  margin: 50px;
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+}
+
+#collection_conteneur {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
+}
+
+.div_items {
+  background-color: grey;
+  padding: 20px;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+  border-radius: 30% 70% 70% 30% / 30% 58% 42% 70%;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+}
+.div_items h1 {
+  margin-bottom: 10px;
+  font-size: 16px;
+  text-transform: uppercase;
+}/*# sourceMappingURL=style.css.map */
