--- a/assets/style.css
+++ b/assets/style.css
@@ -22,7 +22,7 @@ header {
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   text-transform: uppercase;
-  border-radius: 30% 70% 70% 30% / 30% 58% 42% 70%;
+  border-radius: 20px;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
 }
 .div_items h1 {
