--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,11 +1,25 @@
 body {
-    background-color: #F5F7F8;
+    background-color: #F5F5F5;
 }
 header {
-    text-align: center;
-    margin: 50px;
+    color: #2B2A4C;
     font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
+    padding: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+.paragraphe_banniere {
+ margin-left: 20px;
+    h1 {
+        border-bottom: solid;
+        border-color: #2B2A4C;
+    }
+    p {
+        margin-top: -5px;
+    }
 }
 #collection_conteneur {
     display: grid;
@@ -13,17 +27,28 @@ header {
     gap: 20px;
   }
   .div_items {
-    background-color: grey;
+    color: #F0ECE5;
+    background: #2B2A4C;
     padding: 20px;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     text-transform: uppercase;
-    border-radius: 20px;
-    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+    border-radius: 15px 15px 0px 0px;
+    transition: transform 0.3s ease;
+&:hover 
+      {
+    transform: scale(1.05); 
+}
   h1 {
     margin-bottom: 10px;
     font-size: 16px;
     text-transform: uppercase;
   }
-}
+  img {
+    max-width: 300px;
+    width: 100%;
+    }
+  p {
+    color: #B6BBC4;
+  } }
